File saved in 2.92 alpha cannnot be opened in previous versions #82387

Closed
opened 2020-11-04 02:19:26 +01:00 by Omar Gonzáles Díaz · 16 comments

System Information
Not relevant, affect all OSes

Blender Version
Broken: Blender 2.92 ef4aa42ea4
Worked: Any version before this commit

Short description of error
It is not possible to open a *.blend file saved by Blender 2.92 in 2.91.
There is already a patch in development see D9442 for details.

Exact steps for others to reproduce the error

    1. Save a *.blend file in Blender 2.92 (with a build after commit ef4aa42ea4)
    1. Attempt to open it in Blender 2.91.

2_92.blend

**System Information** Not relevant, affect all OSes **Blender Version** Broken: Blender 2.92 ef4aa42ea4 Worked: Any version before this commit **Short description of error** It is not possible to open a *.blend file saved by Blender 2.92 in 2.91. There is already a patch in development see [D9442](https://archive.blender.org/developer/D9442) for details. **Exact steps for others to reproduce the error** - 1. Save a *.blend file in Blender 2.92 (with a build after commit ef4aa42ea4) - 2. Attempt to open it in Blender 2.91. [2_92.blend](https://archive.blender.org/developer/F9192531/2_92.blend)
Pablo Vazquez was assigned by Omar Gonzáles Díaz 2020-11-04 02:19:26 +01:00

Added subscriber: @ogonzales

Added subscriber: @ogonzales

Added subscriber: @PrettyFireNOI7

Added subscriber: @PrettyFireNOI7

I can confirm:
Using default scene saved in Blender 2.92 then opened it up via Blender 2.90.1 and today's 2.91 beta.Immediately crashed.So as my other files saved in today's 2.92 alpha.

I can confirm: Using default scene saved in Blender 2.92 then opened it up via Blender 2.90.1 and today's 2.91 beta.Immediately crashed.So as my other files saved in today's 2.92 alpha.

Added subscriber: @jenkm

Added subscriber: @jenkm
[D9442: Fix crash loading file saved with recent master in old versions](https://archive.blender.org/developer/D9442)
Pablo Vazquez was unassigned by Robert Guetzkow 2020-11-04 09:45:20 +01:00

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Removed subscriber: @pablovazquez

Removed subscriber: @pablovazquez
Julian Eisel was assigned by Robert Guetzkow 2020-11-04 09:57:25 +01:00

Added subscriber: @rjg

Added subscriber: @rjg

The proposed patch D9442 fixes the issue.

The proposed patch [D9442](https://archive.blender.org/developer/D9442) fixes the issue.

This issue was referenced by 390a0d5624

This issue was referenced by 390a0d562474134b3978aeb11535ea33ca8afb0e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Note: If you had this issue, you can store affected files once more with latest master, and they should open fine in old versions again.

Note: If you had this issue, you can store affected files once more with latest master, and they should open fine in old versions again.

Added subscriber: @julian-8

Added subscriber: @julian-8

@JulianEisel still file saved with 2.92 alpha (blender-2.92.0-9a7da1242d9f-windows64) crashes older versions of blender (2.91 and 2.91 alpha.

I'm using Windows 10, 64 bits.

Test file attached.test_292a.blend

@JulianEisel still file saved with 2.92 alpha (blender-2.92.0-9a7da1242d9f-windows64) crashes older versions of blender (2.91 and 2.91 alpha. I'm using Windows 10, 64 bits. Test file attached.[test_292a.blend](https://archive.blender.org/developer/F9218684/test_292a.blend)
Member

9a7da1242d is a commit from yesterday (or this night in European time), the build is not new enough and doesn't include the fix. You'll have to wait until the daily builds are updated with a new version.

I actually tried to force the daily builds to be updated after committing the fix, but I see no way of doing that myself.

9a7da1242d9f is a commit from yesterday (or this night in European time), the build is not new enough and doesn't include the fix. You'll have to wait until the daily builds are updated with a new version. I actually tried to force the daily builds to be updated after committing the fix, but I see no way of doing that myself.
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82387
No description provided.